public/styles.css
html,
body,
.container {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  background: #E8E8E8;
  font-family: sans-serif;
}

* {
  box-sizing: border-box;
}

.padded {
  padding: 2em;
}

.flex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card {
  border-radius: 1em;
  overflow: hidden;
  background: #FFFFFF;
  box-shadow: 0 30px 60px -15px #888888;
  max-width: 400px;
  max-height: 500px;
  width: 100%;
  height: 100%;

  align-items: stretch;
}

.upper {
  background: #D6D6D6;
  background-size: cover;
  flex: 1;
}

.highlight {
  background: #515151;
  color: #FFFFFF;
  padding: 0.2em;
  display: inline-block;
}

.text-input {
  width: 100%;
  font-size: 1.7em;
  border: none;
}

.field-group {
  display: flex;
  align-items: center;
}

.field {
  flex: 1;
  margin-right: 1em;
}

.button {
  background: #515151;
  color: #FFFFFF;
  border: none;
  border-radius: 100%;
  font-size: 1.1em;
  width: 44px;
  height: 44px;
  text-align: center;
}

